--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 </head>
 
 <body>
-<p style = "color:red; text-align:center;">THE SERVER IS BACK UP! JOIN BY CONNECTING TO ws://craftclue.ddns.net:20687</p>
-<p style = "color:blue; text-align:center;">REMEMBER, YOU CAN ONLY JOIN ON <a href="/craftclueoffline.html"
-download="Offline_Download_Version.html">THE EAGLERCRAFT LOCAL FILE</a> FOR NOW! Confused? Visit <a href = "https://craftclue.rocks/news.html">The CraftClue Times</a> and/or watch <a href = "https://www.youtube.com/watch?v=7ZYEPgim5mI">this helpful video tutorial</a> (can't access YouTube? watch it <a href="https://craftclue.rocks/tutorial.mp4">here</a>).</p>
+<p style = "color:red; text-align:center;">THE SERVER IS BACK UP! JOIN BY CONNECTING TO wss://play.craftclue.rocks/server</p>
 <p style="text-align:center;"><img src="crafticon.png" alt="CraftClue's server icon. Thanks for ARG902 for creating the base image!" width="280" height="280" class = "center"></p>
 <p style="text-align:center;">This is the website portal for craftclue, a cracked half-anarchy server for <a href = "https://github.com/LAX1DUDE/eaglercraft#how-does-it-work"> eaglercraft</a>!</p>
-<p style="text-align:center;">Check out <a href = "https://craftclue.rocks/news.html">The CraftClue Times</a> for news on craftclue. (This is where all of you people who are confused about the server being down go).</p>
-<p style="text-align:center;">Go to <a href = "https://craftclue.rocks/communications.html">cluemmunications</a> to unblock Discord and talk in the official craftclue Discord server.</p>
+<p style="text-align:center;">Check out <a href = "/news.html">The CraftClue Times</a> for news on craftclue.
+<p style="text-align:center;">Go to <a href = "/communications.html">cluemmunications</a> to unblock Discord and talk in the official craftclue Discord server.</p>
 <p style="text-align:center;">Make sure to head over to our partner, <a href = "https://sites.google.com/view/bypass-central">Bypass Central</a>! They offer a ton of unblocked resources and proxies.</p>
-<p style="text-align:center;">Want to support craftclue? Go to <a href = "https://craftclue.rocks/support.html"> this page</a> to learn how.</p>
+<p style="text-align:center;">Want to support craftclue? Go to <a href = "/support.html"> this page</a> to learn how.</p>
 <script src="script.js"></script>
 </body>
   
