--- a/news.html
+++ b/news.html
@@ -15,14 +15,8 @@
 <p style="text-align:center;">Dear valued craftclue players,</p>
 <p> As you may or may not have noticed, the server at wss://craftclue.rocks/server is down. This is an explanation to answer your questions.</p>
 <p>The replit that the server was hosted on ran out of storage space. This led to all the files getting deleted (I FUCKING HATE YOU REPLIT!!!!). At first when I saw all those deleted files I thought that all the server progress was gone forever... BUT. I remembered that I had a backup from 7 days ago. I quickly transfered this world data from 7 days ago to a new server host that is much better than replit and is actually intended to host minecraft servers. </p>
-<p> So, what now? The server is be BACK UP! JOIN BY CONNECTING TO THE FOLLOWING IP: ws://craftclue.ddns.net:20687 </p>
-<p>REMEMBER: ALL SERVER DATA WILL BE FROM 7 DAYS AGO!!! (4/10/2022 I will not be doing refunds.)</p>
-<p>Note that when the server is back up later today, you won't be able to connect to the server's new ip address on g.eags.us or any other website. YOU WILL ONLY BE ABLE TO CONNECT TO IT ON THE LOCAL FILE. To download the local file, click the download button below.
-<p>I am trying to change the IP back to a wss:// so people will be able to join on g.eags.us, but this will take some time. </p>
-<p style="text-align:center;"><a href="/craftclueoffline.html"
-download="Offline_Download_Version.html">
-<button type="button">Download Eaglercraft Local File</button></p>
-</a>
+<p> So, what now? The server is be BACK UP! JOIN BY CONNECTING TO THE FOLLOWING IP: wss://play.craftclue.rocks/server </p>
+<p>REMEMBER: ALL SERVER DATA WILL BE FROM 7 DAYS AGO!!! (4/10/2022) I will not be doing refunds.</p>
 <script src="script.js"></script>
 </body>
   
