--- a/news.html
+++ b/news.html
@@ -15,7 +15,7 @@
 <p style="text-align:center;">Dear valued craftclue players,</p>
 <p> As you may or may not have noticed, the server at wss://craftclue.rocks/server is down. This is an explanation to answer your questions.</p>
 <p>The replit that the server was hosted on ran out of storage space. This led to all the files getting deleted (I FUCKING HATE YOU REPLIT!!!!). At first when I saw all those deleted files I thought that all the server progress was gone forever... BUT. I remembered that I had a backup from 7 days ago. I quickly transfered this world data from 7 days ago to a new server host that is much better than replit and is actually intended to host minecraft servers. </p>
-<p> So, what now? The server is be BACK UP! JOIN BY CONNECTING TO THE FOLLOWING IP: wss://play.craftclue.rocks/server </p>
+<p> So, what now? The server is BACK UP! JOIN BY CONNECTING TO THE FOLLOWING IP: wss://play.craftclue.rocks/server </p>
 <p>REMEMBER: ALL SERVER DATA WILL BE FROM 7 DAYS AGO!!! (4/10/2022) I will not be doing refunds.</p>
 <script src="script.js"></script>
 </body>
