--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <p style="text-align:center;"><img src="crafticon.png" alt="CraftClue's server icon. Thanks for ARG902 for creating the base image!" width="280" height="280" class = "center"></p>
-<p style="text-align:center;">This is the website portal for craftclue, a cracked 1.5.2 mostly anarchy server. For more information go to our <a href="https://craftclue.rocks/about.html">About page</a> for more information.
+<p style="text-align:center;">This is the website portal for craftclue, a cracked 1.5.2 mostly anarchy server. For more information go to our <a href="https://craftclue.rocks/about.html">About page</a>.
 <p style="text-align:center;">Check out <a href = "/news.html">The CraftClue Times</a> for news on craftclue.
 <p style="text-align:center;">Go to <a href = "/communications.html">cluemmunications</a> to unblock Discord and talk in the official craftclue Discord server.</p>
 <p style="text-align:center;">Make sure to head over to our partner, <a href = "https://sites.google.com/view/bypass-central">Bypass Central</a>! They offer a ton of unblocked resources and proxies.</p>
