--- a/sidebyside2d.html
+++ b/sidebyside2d.html
@@ -11,11 +11,11 @@
 <body>
 <div class="row">
   <div class="column">
-    <img src="spawn.png" alt="5-22-2022" style="width:100%">
+    <img src="spawn5-22-2022-2D.png" alt="5-22-2022" style="width:100%">
     <p>An aerial view of spawn from 5/22/2022.</p>
   </div>
   <div class="column">
-    <img src="2dspawn.png" alt="5-29-2022" style="width:100%">
+    <img src="spawn5-29-2022-2D" alt="5-29-2022" style="width:100%">
     <p>An aerial view of spawn from 5/29/2022.</p>
   </div>
 </div>
