--- a/spawncomparison.html
+++ b/spawncomparison.html
@@ -15,7 +15,7 @@
     <p>An aerial view of spawn from 5/22/2022.</p>
   </div>
   <div class="column">
-    <img src="spawn5-29-2022-2D" alt="5-29-2022" style="width:100%">
+    <img src="spawn5-29-2022-2D.png" alt="5-29-2022" style="width:100%">
     <p>An aerial view of spawn from 5/29/2022.</p>
   </div>
 </div>
