--- a/spawncomparison.html
+++ b/spawncomparison.html
@@ -18,6 +18,7 @@
     <img src="spawn5-29-2022-2D.png" alt="5-29-2022" style="width:100%">
     <p>An aerial view of spawn from 5/29/2022.</p>
   </div>
+  <p>3D renders:</p>
   <div class="column">
     <img src="spawn5-22-2022-3D.png" alt="5-22-2022" style="width:100%">
     <p>An 3D view of spawn from 5/22/2022.</p>
