--- a/about.html
+++ b/about.html
@@ -9,22 +9,12 @@
 </head>
 
 <body>
-  <p>CraftClue is a 1.5.2 (mostly) anarchy cracked Minecraft server.
-What sets us apart from apart from other anarchy/"mostly" anarchy servers?
-  </p>
-  <p>
-Well, as stated above, this server is cracked 1.5.2, which is refreshing for players who care for older versions of Minecraft more than newer versions. Also, due to the server being cracked, you do not need to pay for a Mojang account to pay.
-  </p>
-  <p>
-However, the true thing that makes CraftClue stand out are its plugins. These unique, interesting add-ons make the (mostly) anarchy experience much more entertaining. These plugins simply add on to an anarchy experience and do not diminish it in any way.
+  <p>CraftClue is a 1.5.2 anarchy cracked Minecraft server.
   </p>
   <p>
 The IP (for desktop clients) is java.craftclue.rocks
 You can also play the server on a web browser. Yes, you read that right. A web browser. To play, go to <a href="https://g.eags.us/eaglercraft/?server=wss://play.craftclue.rocks">this website.</a>
-In order to get a respectable frame rate in the browser, you will probably need to adjust the view distance in Video Settings.
-</p>
-<p>
-Why is it called a "mostly" anarchy server? That is due to the aforementioned plugins and the fact that we have multiple admins (5, including myself). Other than that, it is just like an anarchy server with no rules.
+In order to get a respectable frame rate in the browser, you will probably need to adjust the view distance in Video Settings. You can also use other Eaglercraft clients to connect to CraftClue with the IP wss://play.craftclue.rocks
 </p>
   <script src="script.js"></script>
 </body>
