--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html>
 
 <head>
+  <title>CraftClue Website Portal</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Website Portal</title>
+  <meta name="description" content="CraftClue is a cracked 1.5.2 anarchy Minecraft server. In addition from joining with a regular Minecraft client, you can also join the server from a 1.5.2 browser Minecraft client called Eaglercraft, which lets you play the server on, among other things, school Chromebooks." />
+  <meta name="keywords" content="minecraft, chromebook, games, eaglercraft, anarchy, 1.5.2, cracked, offline-mode, non-premium, 2b2bt" />
+  <meta name="author" content="cluefuhfake" />
+  <meta property="og:title" content="CraftClue" />
+  <meta property="og:locale" content="en-US" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="CraftClue is a cracked 1.5.2 anarchy Minecraft server. In addition from joining with a regular Minecraft client, you can also join the server from a 1.5.2 browser Minecraft client called Eaglercraft, which lets you play the server on, among other things, school Chromebooks." />
 </head>
 
 <body>
 <p style="text-align:center;"><img src="crafticon.png" alt="CraftClue's server icon. Thanks for ARG902 for creating the base image!" width="280" height="280" class = "center" title = "CraftClue's server icon. Thanks for ARG902 for creating the base image!"></p>
-<p style="text-align:center;">This is the website portal for craftclue, a cracked 1.5.2 mostly anarchy server. For more information go to our <a href="/about.html">About page</a>.
-<p style="text-align:center;">Check out <a href = "/news.html">The CraftClue Times</a> for news on craftclue.
-<p style="text-align:center;">Go to <a href = "/communications.html">cluemmunications</a> to unblock Discord and talk in the official craftclue Discord server.</p>
+<p style="text-align:center;">This is the website portal for  CraftClue, a cracked 1.5.2 anarchy server. For more information go to our <a href="/about.html">About page</a>.
+<p style="text-align:center;">Go to <a href = "/communications.html">cluemmunications</a> to unblock Discord, talk in the official CraftClue Discord server, and read news about CraftClue.</p>
 <p style="text-align:center;">Make sure to head over to our partner, <a href = "https://sites.google.com/view/bypass-central">Bypass Central</a>! They offer a ton of unblocked resources and proxies.</p>
 <script src="script.js"></script>
 </body>
