--- a/about.html
+++ b/about.html
@@ -2,10 +2,16 @@
 <html>
 
 <head>
+  <title>CraftClue Website Portal</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>About CraftClue</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <meta name="description" content="CraftClue is a cracked 1.5.2 anarchy Minecraft server. In addition from joining with a regular Minecraft client, you can also join the server from a 1.5.2 browser Minecraft client called Eaglercraft, which lets you play the server on, among other things, school Chromebooks." />
+  <meta name="keywords" content="minecraft, chromebook, games, eaglercraft, anarchy, 1.5.2, cracked, offline-mode, non-premium, 2b2bt" />
+  <meta name="author" content="cluefuhfake" />
+  <meta property="og:title" content="CraftClue" />
+  <meta property="og:locale" content="en-US" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="CraftClue is a cracked 1.5.2 anarchy Minecraft server. In addition from joining with a regular Minecraft client, you can also join the server from a 1.5.2 browser Minecraft client called Eaglercraft, which lets you play the server on, among other things, school Chromebooks." />
 </head>
 
 <body>
