--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 <p style="text-align:center;"><img src="crafticon.png" alt="CraftClue's server icon. Thanks for ARG902 for creating the base image!" width="280" height="280" class = "center" title = "CraftClue's server icon. Thanks for ARG902 for creating the base image!"></p>
-<p style="text-align:center;">This is the website portal for  CraftClue, a cracked 1.5.2 anarchy server. For more information go to our <a href="/about.html">About page</a>.
+<p style="text-align:center;">This is the website portal for  CraftClue, a cracked 1.5.2 anarchy server that can be joined from the web browser using a special browser client called <a href="https://github.com/LAX1DUDE/eaglercraft">"Eaglercraft".</a> This means that you can play the server on devices that are usually restricted, like office computers and school Chromebooks.</p>
 <p style="text-align:center;">Go to <a href = "/communications.html">cluemmunications</a> to unblock Discord, talk in the official CraftClue Discord server, and read news about CraftClue.</p>
 <p style="text-align:center;">Make sure to head over to our partner, <a href = "https://sites.google.com/view/bypass-central">Bypass Central</a>! They offer a ton of unblocked resources and proxies.</p>
 <script src="script.js"></script>
