--- a/communications.html
+++ b/communications.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-<p>Don't need to unblock Discord? The server invite is <a href = "https://dsc.gg/craftclue">https://dsc.gg/craftclue</a>.</p>
+<p>Don't need to unblock Discord? The server invite is <a href = "https://discord.gg/V54E8rVHg2">https://discord.gg/V54E8rVHg2</a>.</p>
 <script src="script.js"></script>
 </body>
   
