--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="CraftClue is a cracked 1.5.2 anarchy Minecraft server. In addition from joining with a regular Minecraft client, you can also join the server from a 1.5.2 browser Minecraft client called Eaglercraft, which lets you play the server on, among other things, school Chromebooks." />
-  <meta name="keywords" content="minecraft, chromebook, games, eaglercraft, anarchy, 1.5.2, cracked, offline-mode, non-premium, 2b2bt" />
+  <meta name="keywords" content="minecraft, chromebook, games, eaglercraft, anarchy, 1.5.2, cracked, offline-mode, non-premium, 2b2bt, craftclue, unblocked, school, office" />
   <meta name="author" content="cluefuhfake" />
   <meta property="og:title" content="CraftClue" />
   <meta property="og:locale" content="en-US" />
