--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <title>CraftClue Website Portal</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <meta name="description" content="CraftClue is a cracked 1.5.2 anarchy Minecraft server. In addition from joining with a regular Minecraft client, you can also join the server from a 1.5.2 browser Minecraft client called Eaglercraft, which lets you play the server on, among other things, school Chromebooks." />
+  <meta name="description" content="CraftClue is a cracked 1.5.2 anarchy Minecraft server. In addition to playing the server on a regular Minecraft client, it can be joined from a browser client named Eaglercraft, letting you play the server on restricted devices like school Chromebooks." />
   <meta name="keywords" content="minecraft, chromebook, games, eaglercraft, anarchy, 1.5.2, cracked, offline-mode, non-premium, 2b2bt, craftclue, unblocked, school, office" />
   <meta name="author" content="cluefuhfake" />
   <meta property="og:title" content="CraftClue" />
   <meta property="og:locale" content="en-US" />
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="CraftClue is a cracked 1.5.2 anarchy Minecraft server. In addition from joining with a regular Minecraft client, you can also join the server from a 1.5.2 browser Minecraft client called Eaglercraft, which lets you play the server on, among other things, school Chromebooks." />
+  <meta property="og:description" content="CraftClue is a cracked 1.5.2 anarchy Minecraft server. In addition to playing the server on a regular Minecraft client, it can be joined from a browser client named Eaglercraft, letting you play the server on restricted devices like school Chromebooks." />
 </head>
 
 <body>
 <h1>
 <p style="text-align:center;"><img src="crafticon.png" alt="CraftClue's server icon. Thanks for ARG902 for creating the base image!" width="280" height="280" class = "center" title = "CraftClue's server icon. Thanks for ARG902 for creating the base image!"></p>
-<p style="text-align:center;">This is the website portal for  CraftClue, a cracked 1.5.2 anarchy server that can be joined from the web browser using a special browser client called <a href="https://github.com/LAX1DUDE/eaglercraft">"Eaglercraft"</a>. This means that you can play the server on devices that are usually restricted, like office computers and school Chromebooks.</p>
+<p style="text-align:center;">This is the website portal for  CraftClue, a cracked 1.5.2 anarchy server that can be joined from the web browser using a special client named <a href="https://github.com/LAX1DUDE/eaglercraft">"Eaglercraft"</a>. This means that you can play the server on devices that are usually restricted, like office computers and school Chromebooks.</p>
 <p style="text-align:center;">Go to <a href = "/communications.html">cluemmunications</a> to unblock Discord, talk in the official CraftClue Discord server, and stay up to date with CraftClue news.</p>
 <p style="text-align:center;">Make sure to head over to our partner, <a href = "https://sites.google.com/view/bypass-central">Bypass Central</a>! They offer a ton of unblocked resources and proxies.</p>
 </h1>
