--- a/communications.html
+++ b/communications.html
@@ -2,9 +2,16 @@
 <html>
 
 <head>
+  <title>Communications</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Communications</title>
+  <meta name="description" content="CraftClue is a cracked 1.5.2 anarchy Minecraft server. In addition to playing the server on a regular Minecraft client, it can be joined from a browser client named Eaglercraft, letting you play the server on restricted devices like school Chromebooks." />
+  <meta name="keywords" content="minecraft, chromebook, games, eaglercraft, anarchy, 1.5.2, cracked, offline-mode, non-premium, 2b2bt, craftclue, unblocked, school, office" />
+  <meta name="author" content="cluefuhfake" />
+  <meta property="og:title" content="CraftClue" />
+  <meta property="og:locale" content="en-US" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="CraftClue is a cracked 1.5.2 anarchy Minecraft server. In addition to playing the server on a regular Minecraft client, it can be joined from a browser client named Eaglercraft, letting you play the server on restricted devices like school Chromebooks." />
   <link href="style.css" rel="stylesheet" type="text/css" />
   <h1>
   <widgetbot
