--- a/communications.html
+++ b/communications.html
@@ -20,10 +20,19 @@
   height="500"
   ></widgetbot>
   <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+   <style type ="text/css" >
+   .footer{ 
+       position: fixed;     
+       text-align: center;    
+       bottom: 0px; 
+       width: 100%;
+   }  
+   </style>
 </head>
 
 <body>
 <p>Don't need to unblock Discord? The server invite is <a href = "https://discord.gg/V54E8rVHg2">https://discord.gg/V54E8rVHg2</a>.</p>
+<div class="footer">Return to <a href = "https://www.craftclue.rocks">main page</a>.</div>
 </body>
   
 </html>
