--- a/communications.html
+++ b/communications.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-<p>Don't need to unblock Discord? The server invite is <a href = "https://discord.gg/V54E8rVHg2">https://discord.gg/V54E8rVHg2</a>.</p>
+<p style="text-align:center>Don't need to unblock Discord? The server invite is <a href = "https://discord.gg/V54E8rVHg2">https://discord.gg/V54E8rVHg2</a>.</p>
 <div class="footer">Return to <a href = "https://www.craftclue.rocks">main page</a>.</div>
 </body>
   
